# 1001-Haskell-Examples

./: Makefile  OneThousandAndOneExampleHaskellPrograms.cabal  cabal.project  monoids.hs
Example/: STM.hs
egg-diagrams/: .dir-locals.el  Main.hs  NOTES.md  egg-diagrams.cabal
egg-diagrams/Example/: Diagrams.lhs
package-fltkhs/c/: texteditor.cpp
package-fltkhs/hs/Example/: FLTKHS.hs
package-formatting/: Example.hs  egg-formatting.cabal
package-lens-aeson/: .dir-locals.el  Example_lens_aeson.hs  Main_lens_aeson.hs
package-megaparsec/: GetCabalProjectFields.hs
pattern-file-embded/: egg-file-embed.hs
tutorials/gtk3/: Makefile  calc.cabal  default.nix  shell.nix
tutorials/gtk3/docs/: runtime-dependencies.txt
tutorials/gtk3/src/: .dir-locals.el  Main.hs
