cabal-version:       2.2
                     -- for "common stanzas".

build-type:          Simple

----------------------------------------

name:    egg-diagrams
version: 0.0
-- x-revision: 0

----------------------------------------

synopsis: 1001 Haskell Examples

description:
    .
    Examples for the @diagrams@ package.
    .

----------------------------------------

license:             GPL-3.0-or-later
--license-file:        LICENSE.txt
copyright:           2019 Spiros Boosalis

author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com

category:            Example

----------------------------------------

stability:   experimental
tested-with: GHC == 8.6.3

----------------------------------------
-- FILES
----------------------------------------

data-files:
  data/*.txt

extra-source-files:
 LICENSE.txt
 .gitignore
 Makefile

----------------------------------------
-- REPOSITORY
----------------------------------------

homepage:            http://github.com/sboosali/OneThousandAndOneExampleHaskellPrograms#readme
bug-reports:         http://github.com/sboosali/OneThousandAndOneExampleHaskellPrograms/issues

source-repository head
  type:     git
  location: git://github.com/sboosali/OneThousandAndOneExampleHaskellPrograms.git
  subdir:   egg-diagrams

-- source-repository this
--   type:     git
--   location: https://github.com/sboosali/OneThousandAndOneExampleHaskellPrograms/tree/v0.1
--   subdir:   .

----------------------------------------
-- FLAGS
----------------------------------------

-- flag ...
--   default:     False
--   description: Enable ...
--   manual:      True

----------------------------------------
-- COMMON_STANZAS
----------------------------------------
common egg

 ------------------------------
 ------------------------------
 default-language:
   Haskell2010

 ------------------------------
 ------------------------------
 build-depends:
   base >=4.10 && <5

 ------------------------------
 ------------------------------
 ghc-options:

  --------------------
  -- warning groups
  --------------------

  -Wall

  --------------------
  -- disabled warnings
  --------------------

  -Wno-unticked-promoted-constructors

  --------------------
  -- enabled warnings
  --------------------

  -- enable
  -Wincomplete-uni-patterns
  -Wincomplete-record-updates
  -Widentities
  -Wmissing-methods
  -fwarn-tabs
 
  --------------------
  -- typed-holes
  --------------------

  -- use `typed-holes`, not `undefined`, during development

  -fdefer-typed-holes
  -Wtyped-holes

  --------------------
  -- (miscellaneous warnings)
  --------------------

  -- raise a warning into an error
  -- -Werror=missing-fields

 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------     

        -Wcompat
      
        --------------------
        -- enabled warnings
        --------------------

        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances

 ------------------------------
 ------------------------------

 default-extensions:

   --------------------
   -- `deriving`
   --------------------
   AutoDeriveTypeable

   DeriveDataTypeable
   DeriveGeneric
   DeriveFunctor
   DeriveFoldable
   DeriveTraversable
   DeriveLift

   StandaloneDeriving

   --------------------
   -- syntax
   --------------------
   PackageImports
   InstanceSigs

   LambdaCase

   RecordWildCards
   NamedFieldPuns

   EmptyCase
   EmptyDataDecls

   TypeOperators

   TupleSections

 other-extensions:

   --------------------
   -- macros
   --------------------
   TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
   OverloadedStrings
   OverloadedLists

   --------------------
   -- typeclasses
   --------------------
   MultiParamTypeClasses
   FlexibleContexts
   FlexibleInstances
   TypeFamilies
   FunctionalDependencies

   --------------------
   -- patterns
   --------------------
   ViewPatterns
   PatternSynonyms

   --------------------
   -- (miscellaneous)
   --------------------
   ScopedTypeVariables

   -- RebindableSyntax
   -- kinds:
   -- DataKinds ConstraintKinds
   -- harmful to inference:
   -- GADTs RankNTypes
   -- (miscellaneous)

----------------------------------------
-- LIBRARY -----------------------------
----------------------------------------
--library

----------------------------------------
-- EXECUTABLES -------------------------
----------------------------------------

executable egg-diagrams

  import:         egg

  hs-source-dirs: .

  main-is:        Main.hs
  other-modules:  Example.Diagrams

  build-depends: diagrams ^>= 1.4
               , diagrams-lib
               , diagrams-svg

               , linear ^>= 1.20
                 -- ^ Linear Algebra

               , SVGFonts
               , split

----------------------------------------