cabal-version:       2.2
build-type:          Simple

--------------------------------------------------

name:                egg-formatting
version:             0.0.0

--------------------------------------------------
-- Information -----------------------------------
--------------------------------------------------

category: Example
synopsis: « formatting » example
description: Example of the « formatting » package.

--------------------------------------------------

author:              Sam Boosalis
maintainer:          Sam Boosalis <samboosalis@gmail.com>

--------------------------------------------------
-- Licensing -------------------------------------
--------------------------------------------------

license:             Apache-2.0
license-file:        LICENSE
copyright:           2019 Sam Boosalis

--------------------------------------------------
-- Executables -----------------------------------
--------------------------------------------------

executable egg-formatting

  default-language: Haskell2010

  ----------------------------

  hs-source-dirs: ./

  main-is:        ./Example.hs

  ----------------------------

  build-depends: base       ^>= 4.12
               , text       ^>= 1.2
               , formatting ^>= 6.3

  ----------------------------

  other-extensions: OverloadedStrings
                  , PackageImports

--------------------------------------------------
-- EOF -------------------------------------------
--------------------------------------------------